--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -900,6 +900,7 @@
           left: rem(-120);
           display: flex;
           flex-wrap: wrap;
+          opacity: 0;
         }
         .site-header--ecosystem & {
           @include media-breakpoint-up(xl) {
@@ -908,7 +909,7 @@
           }
         }
         &[aria-hidden="true"] {
-          opacity: 0;
+          // opacity: 0;
           transform: translate3d(100%, 0, 0);
           visibility: hidden;
           @include media-breakpoint-up(xl) {
