--- a/src/components/site-header/site-header--ecosystem.twig
+++ b/src/components/site-header/site-header--ecosystem.twig
@@ -91,11 +91,13 @@
                     {% endfor %}
                   </ul>
                   {% if utility_button %}<a class="site-header__utility-button" href="{{ utility_button.url }}">{{ utility_button.title }}<span></span></a>{% endif %}
+                  {% if search_visible == true %}
                   <form class="site-header__search-form-mobile">
                     <label class="visible-for-screen-readers" for="searchMobile">Search</label>
                     <input type="search" id="searchMobile" name="search" placeholder="Search">
                     <button type="submit"><span class="fak fa-iastate22-magnifying-glass" aria-hidden="true"></span><span class="visible-for-screen-readers">Submit Search</span></button>
                   </form>
+                  {% endif %}
                 </nav>
               </div>
             </div>
