updating a-z index page to use @page extend

--- a/src/components/pages/a-z-index.twig
+++ b/src/components/pages/a-z-index.twig
@@ -1,3 +1,6 @@
+{% extends "@page" %}
+
+{% block content %}
 <script>
   document.body.classList.add("a-z-index", "top-level-page");
 </script>
@@ -36,3 +39,4 @@
     </ul>
   </div>
 </div>
+{% endblock %}
