--- a/src/components/pages/admission-and-aid.twig
+++ b/src/components/pages/admission-and-aid.twig
@@ -1,3 +1,6 @@
+{% extends "@page" %}
+
+{% block content %}
 <script>
   document.body.classList.add("admission-and-aid", "top-level-page");
 </script>
@@ -150,3 +153,4 @@
     </ul>
   </div>
 </div>
+{% endblock %}
