updating college-template page to to use @page extend, fixing padding-top

--- a/src/components/pages/college-template.twig
+++ b/src/components/pages/college-template.twig
@@ -1,3 +1,6 @@
+{% extends "@page" %}
+
+{% block content %}
 <script>
   document.body.classList.add("college", "top-level-page");
 </script>
@@ -139,3 +142,4 @@
       {% include "@call-to-action--small" with keep_exploring.call_to_action_small %}
     </div>
 </div>
+{% endblock %}
