updating search page to use @page extend

--- a/src/components/pages/search.twig
+++ b/src/components/pages/search.twig
@@ -1,3 +1,6 @@
+{% extends "@page" %}
+
+{% block content %}
 <script>
   document.body.classList.add("search", "top-level-page");
 </script>
@@ -16,3 +19,4 @@
   </div>
   <script async src="https://cse.google.com/cse.js?cx=257e21f65c60c4e9c"></script>
 </div>
+{% endblock %}
