https://bugify.idfive.com/issues/27690

--- a/src/components/pages/_page.twig
+++ b/src/components/pages/_page.twig
@@ -8,7 +8,9 @@
       {% block content %}
       {% endblock %}
     </main>
-    {% include "@site-footer" %}
+    {% block footer %}
+      {% include "@site-footer" %}
+    {% endblock %}
   </div>
 </div>
 {% render "@privacy-consent" %}
