https://bugify.idfive.com/issues/27693

--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -50,6 +50,10 @@ a {
     color: $iastate-maroon;
     font-weight: 700;
     font-family: $typeface-sans-serif;
+    transition: 0.2s color ease-in-out;
+    &:hover {
+      color: $iastate-red;
+    }
   }
 }
 
