--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -34,7 +34,7 @@
 
   &:hover {
     background-color: $iastate-maroon;
-    color: $white !important;
+    color: $white;
     padding-right: rem(40);
     .arrow {
       width: rem(12);
