--- a/src/components/hero/_hero.scss
+++ b/src/components/hero/_hero.scss
@@ -9,6 +9,7 @@
     @include media-breakpoint-up(lg) {
       padding-top: rem(25);
       margin-bottom: rem(65);
+      margin-right: rem(-110);
     }
   }
 }
