update to: https://bugify.idfive.com/issues/27706

--- a/src/components/pages/admission-and-aid.twig
+++ b/src/components/pages/admission-and-aid.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <script>
-  document.body.classList.add("admission-and-aid", "top-level-page");
+  document.body.classList.add("admission-and-aid");
 </script>
 
 <div class="admission-aid-hero">
