--- a/src/components/pages/majors-minors-certificates.twig
+++ b/src/components/pages/majors-minors-certificates.twig
@@ -1,7 +1,7 @@
 {% extends "@page" %}
 
 {% block content %}
-<div class="outer-pad outer-pad--top-level">
+<div class="outer-pad">
   {% include "@hero--top-level-lp" with hero %}
   
   <div class="maj-min-cert-statistic">
