--- a/src/components/pages/a-z-index.twig
+++ b/src/components/pages/a-z-index.twig
@@ -2,10 +2,10 @@
 
 {% block content %}
 <script>
-  document.body.classList.add("a-z-index", "top-level-page");
+  document.body.classList.add("a-z-index");
 </script>
 
-<div class="outer-pad outer-pad--top-level">
+<div class="outer-pad">
   <div class="red-bkgrnd-hero">
     <div class="red-bkgrnd-hero__breadcrumbs">
     {% include "@breadcrumb--top-level-pages" with hero.breadcrumbs %}
