--- a/src/components/pages/college-template.twig
+++ b/src/components/pages/college-template.twig
@@ -2,10 +2,10 @@
 
 {% block content %}
 <script>
-  document.body.classList.add("college", "top-level-page");
+  document.body.classList.add("college");
 </script>
 
-<div class="outer-pad outer-pad--top-level">
+<div class="outer-pad">
     <div class="college-hero">
       <div class="college-hero__breadcrumbs">
         {% include "@breadcrumb--top-level-pages" with hero.breadcrumbs %}
