https://bugify.idfive.com/issues/27715

--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -44,7 +44,7 @@ body {
   }
 }
 
-a {
+a:not(.iastate22-button):not(.iastate22-link-secondary):not(.iastate22-link-external):not(.link-tertiary) {
   .text-content &,
   .accordion-item & {
     color: $iastate-maroon;
