--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -30,7 +30,7 @@
   font-weight: 700;
 }
 
-/* Base
+/* Base Styles
 ========================================================================== */
 
 body {
