updated to https://bugify.idfive.com/issues/27599

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -1111,6 +1111,9 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
     font-size: rem(18);
     line-height: (31 / 18);
   }
+  &:hover {
+    color: $white;
+  }
   .arrow {
     background-color: $white;
     top: rem(17);
