https://bugify.idfive.com/issues/27721

--- a/src/components/statistic-with-text/_statistic-with-text.scss
+++ b/src/components/statistic-with-text/_statistic-with-text.scss
@@ -1,22 +1,33 @@
 .statistic-with-text {
+  @include media-breakpoint-up(md) {
+    display: flex;
+    align-items: flex-start;
+  }
   .statistic {
     margin-top: rem(28);
     margin-bottom: rem(42);
     @include media-breakpoint-up(md) {
-      max-width: 50%;
-      float: left;
+      flex: 0 0 auto;
+      width: rem(324);
       margin: rem(10) rem(45) rem(10) 0;
     }
     @include media-breakpoint-up(lg) {
       margin-right: rem(90);
-      max-width: 35%;
+    }
+  }
+
+  .statistic-with-text__text {
+    @include media-breakpoint-up(md) {
+      flex: 1 1 0;
     }
   }
 
   &.statistic-with-text--right {
+    @include media-breakpoint-up(md) {
+      flex-direction: row-reverse;
+    }
     .statistic {
       @include media-breakpoint-up(md) {
-        float: right;
         margin: rem(10) 0 rem(10) rem(45);
       }
       @include media-breakpoint-up(lg) {
