--- a/src/components/pages/admission-and-aid.twig
+++ b/src/components/pages/admission-and-aid.twig
@@ -49,17 +49,9 @@
       {% endfor %}
     </ul>
   </div>
-  <div class="admission-aid-why__statistic statistic">
-    <h2 class="admission-aid-why__statistic-label">{{ why_iowa.statistic_label }}</h2>
-    <ul>
-      {% for statistic in why_iowa.statistics %}
-      <li>
-        <h2 class="statistic__title">{{ statistic.statistic_title }}</h2>
-        <p class="statistic__text">{{ statistic.statistic_text }}</p>
-      </li>
-      {% endfor %}
-    </ul>
-</div>
+  <div class="admission-aid-why__statistic">
+    {% include "@statistic-with-text" with why_iowa.statistic_with_text %}
+  </div>
 </div>
 
 <div class="admission-aid-afford">
