update to https://bugify.idfive.com/issues/27721

--- a/src/components/statistic/_statistic.scss
+++ b/src/components/statistic/_statistic.scss
@@ -50,6 +50,8 @@
 
 .statistic__title {
   color: $iastate-gold;
+  font-family: $typeface-serif;
+  font-weight: 700;
   text-align: center;
   font-size: rem(55);
   line-height: (68 / 55);
