Correcting Admission & Aid page issue (related to https://bugify.idfive.com/issues/27721)

--- a/src/components/pages/admission-and-aid.twig
+++ b/src/components/pages/admission-and-aid.twig
@@ -50,7 +50,7 @@
     </ul>
   </div>
   <div class="admission-aid-why__statistic">
-    {% include "@statistic-with-text" with why_iowa.statistic_with_text %}
+    {% include "@statistic" with why_iowa.statistics %}
   </div>
 </div>
 
