carousel imported and added to kitchen sink

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -54,6 +54,7 @@
 @import "../components/multi-column-content/multi-column-content";
 @import "../components/blockquote/blockquote";
 @import "../components/modal/modal";
+@import "../components/carousel/carousel";
 @import "../components/site-footer/site-footer";
 @import "../components/site-header/site-header";
 @import "../components/callout-with-image/callout-with-image";
