--- a/src/components/carousel/_carousel.scss
+++ b/src/components/carousel/_carousel.scss
@@ -1,7 +1,15 @@
 @import "~flickity/css/flickity";
 
+.paragraph-widget--carousel {
+  @extend %extended-component-width;
+}
+
 .carousel-holder {
   position: relative;
+}
+
+.flickity-viewport {
+  transition: height 0.3s ease-in-out;
 }
 
 .carousel {
@@ -22,6 +30,10 @@
 
 .carousel__slide-content {
   text-align: left;
+  margin-top: rem(70);
+  @include media-breakpoint-up(lg) {
+    margin-top: rem(15);
+  }
   .carousel__slide-content-caption {
     @extend %caption;
   }
@@ -56,6 +68,10 @@
   background-color: $iastate-maroon;
   transform: translate(50%, -50%);
   transition: 0.3s background-color ease-in-out;
+  @include media-breakpoint-up(lg) {
+    width: rem(60);
+    height: rem(60);
+  }
   &:hover {
     background-color: $iastate-red;
   }
@@ -70,6 +86,12 @@
     height: rem(23);
     top: rem(10);
     left: rem(10);
+    @include media-breakpoint-up(lg) {
+      width: rem(30);
+      height: rem(26);
+      top: rem(17);
+      left: rem(15);
+    }
   }
 }
 
@@ -85,15 +107,40 @@
   right: 0;
 }
 
-.flickity-page-dots {
-  bottom: initial;
+.carousel__nav-dots {
+  padding-top: 60%;
+  position: absolute;
   top: 0;
-  .dot {
-    width: rem(20);
-    height: rem(20);
-    background-color: rgba($grey, 50%);
-    &.is-selected {
-      background-color: $iastate-red;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+  pointer-events: none;
+  @include media-breakpoint-up(lg) {
+    padding-top: 52%;
+  }
+  li {
+    margin: 0 rem(12);
+    .dot {
+      cursor: pointer;
+      pointer-events: initial;
+      border-radius: 50%;
+      width: rem(20);
+      height: rem(20);
+      background-color: rgba($grey, 0.5);
+      border: none;
+      appearance: none;
+      @include media-breakpoint-up(lg) {
+        background-color: rgba($white, 0.5);
+      }
+      &.is-selected {
+        background-color: $iastate-red;
+        @include media-breakpoint-up(lg) {
+          background-color: $white;
+        }
+      }
     }
   }
 }
