--- a/src/components/carousel/carousel.twig
+++ b/src/components/carousel/carousel.twig
@@ -1,5 +1,5 @@
-<div class="carousel-holder">
-    <div class="carousel">
+<div class="iastate22-carousel-holder">
+    <div class="iastate22-carousel">
         {% for slide in slides %}
             <div class="carousel__slide">
                 <div class="carousel__slide-image" style="background-image:url({{ slide.image|path }})"></div>
