Updating carousel placeholder.com images to be served over https instead of http, Adding font-display: swap; to @font-face rules in _typography.scss file

--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -7,6 +7,7 @@
     url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-Reg.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
 }
 @font-face {
   font-family: "Nimbus Sans";
@@ -14,6 +15,7 @@
     url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-RegIta.ttf") format("truetype");
   font-style: italic;
   font-weight: 400;
+  font-display: swap;
 }
 @font-face {
   font-family: "Nimbus Sans";
@@ -21,6 +23,7 @@
     url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-Bol.ttf") format("truetype");
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
 }
 @font-face {
   font-family: "Nimbus Sans";
@@ -28,6 +31,7 @@
     url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-BolIta.ttf") format("truetype");
   font-style: italic;
   font-weight: 700;
+  font-display: swap;
 }
 
 /* Base Styles
