adding height and width attributes and loading="lazy" to all component images

--- a/src/components/blockquote/blockquote.twig
+++ b/src/components/blockquote/blockquote.twig
@@ -2,7 +2,7 @@
   <div class="iastate22-blockquote__inner-wrap">
     {% if portrait %}
     <div class="iastate22-blockquote__portrait">
-      <img src="{{ portrait|path }}" alt="" />
+      <img src="{{ portrait|path }}" alt="" loading="lazy" width="258" height="258" >
     </div>
     {% endif %}
     <div class="iastate22-blockquote__text-wrap">
