--- a/src/components/call-to-action/call-to-action--large.twig
+++ b/src/components/call-to-action/call-to-action--large.twig
@@ -1,6 +1,6 @@
 <div class="call-to-action call-to-action--large">
   <div class="call-to-action__media">
-    <img src="{{ image|path }}" alt="" />
+    <img src="{{ image|path }}" alt="" loading="lazy" width="1713" height="641" >
   </div>
   <div class="call-to-action__copy-wrap">
     <h2 class="call-to-action__headline">{{title}}</h2>
