--- a/src/components/callout-with-image/callout-with-image.twig
+++ b/src/components/callout-with-image/callout-with-image.twig
@@ -1,6 +1,6 @@
 <div class="callout-with-image">
   <div class="callout-with-image__media">
-    <img src="{{ image|path }}" alt="" width="622" height="414" />
+    <img src="{{ image|path }}" alt="" width="622" height="414" loading="lazy" >
   </div>
   <div class="callout-with-image__content text-content">
     <h2>{{title}}</h2>
