--- a/src/components/ecosystem-home-hero/ecosystem-home-hero--supporting-image.twig
+++ b/src/components/ecosystem-home-hero/ecosystem-home-hero--supporting-image.twig
@@ -6,6 +6,6 @@
     {% endif %}
   </div>
   <div class="ecosystem-home-hero__media">
-    <img src="{{ hero.image }}" alt="">
+    <img src="{{ hero.image }}" alt="" loading="lazy" width="800" height="800">
   </div>
 </div>
