--- a/src/components/site-header/site-header.twig
+++ b/src/components/site-header/site-header.twig
@@ -1,8 +1,8 @@
 <header class="site-header">
   <div class="site-header__top">
     <a href="https://www.iastate.edu/" class="site-header__logo">
-      <img class="site-header__logo-mobile" src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-no-tagline-red.svg"|path }}" alt="Iowa State University">
-      <img class="site-header__logo-desktop" src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-with-tagline-red.svg"|path }}" alt="Iowa State University of Science and Technology">
+      <img class="site-header__logo-mobile" src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-no-tagline-red.svg"|path }}" alt="Iowa State University" loading="lazy" width="224" height="17">
+      <img class="site-header__logo-desktop" src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-with-tagline-red.svg"|path }}" alt="Iowa State University of Science and Technology" loading="lazy" width="346" height="46">
     </a>
     <nav class="site-header__utility" aria-label="Utility">
       <ul>
