--- a/src/components/callout/callout.twig
+++ b/src/components/callout/callout.twig
@@ -1,7 +1,7 @@
 <div class="iastate22-callout{% if image %}{% else %} iastate22-callout--no-image{% endif %}">
   {% if image %}
   <div class="iastate22-callout__media">
-    <img src="{{ image|path }}" alt="" width="622" height="414" />
+    <img src="{{ image|path }}" alt="" width="622" height="414" loading="lazy" >
   </div>
   {% endif %}
   <div class="iastate22-callout__content text-content">
