--- a/src/components/card/card--profile-with-modal.twig
+++ b/src/components/card/card--profile-with-modal.twig
@@ -1,6 +1,6 @@
 <div class="iastate22-card iastate22-card--profile-with-modal"{% if clickable is defined %} data-clickable="{{ clickable }}"{% endif %}>
   <div class="iastate22-card__media">
-		<img src="{{ image|path }}" alt="">
+		<img src="{{ image|path }}" alt="" loading="lazy" width="600" height="600" >
 	</div>
 	<div class="iastate22-card__content">
 		<h2 class="iastate22-card__title">{{ title }}</h2>
@@ -13,7 +13,7 @@
           <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><i class="fa-light fa-xmark" aria-hidden="true"></i></button>
           <div class="iastate22-modal__media-name-wrap">
             <div class="iastate22-modal__media">
-              <img src="{{ image|path }}" alt="">
+              <img src="{{ image|path }}" alt="" loading="lazy" width="207" height="197" >
             </div>
             <div class="iastate22-modal__name-role-wrap">
               <div class="iastate22-card__name"><p>{{ name }}</p></div>
