--- a/src/components/card/card--with-modal.twig
+++ b/src/components/card/card--with-modal.twig
@@ -1,7 +1,7 @@
 <div class="iastate22-card iastate22-card--with-modal"{% if clickable is defined %} data-clickable="{{ clickable }}"{% endif %}>
   {% if image %}
   <div class="iastate22-card__media">
-		<img src="{{ image|path }}" alt="">
+		<img src="{{ image|path }}" alt="" loading="lazy" width="600" height="600" >
 	</div>
   {% endif %}
 	<div class="iastate22-card__content">
@@ -16,7 +16,7 @@
           <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><i class="fa-light fa-xmark" aria-hidden="true"></i></button>
           {% if modal.image %}
           <div class="iastate22-modal__media">
-            <img src="{{ modal.image|path }}" alt="">
+            <img src="{{ modal.image|path }}" alt="" loading="lazy" width="600" height="600" >
           </div>
           {% endif %}
           <div class="iastate22-modal__content">
