--- a/src/components/ecosystem-home-hero/ecosystem-home-hero--featured-image.twig
+++ b/src/components/ecosystem-home-hero/ecosystem-home-hero--featured-image.twig
@@ -1,6 +1,6 @@
 <div class="ecosystem-home-hero ecosystem-home-hero--featured-image">
   <div class="ecosystem-home-hero__media">
-    <img src="{{ hero.image }}" alt="">
+    <img src="{{ hero.image }}" alt="" loading="lazy" width="2002" height="1065" >
   </div>
   <div class="ecosystem-home-hero__content">
     <h1 class="ecosystem-home-hero__title">{{ hero.title }}</h1>
