--- a/src/components/external-news-story/external-news-story.twig
+++ b/src/components/external-news-story/external-news-story.twig
@@ -4,7 +4,7 @@
   {% endif %}
   <div class="external-news-story__flex-wrap">
     <div class="external-news-story__media">
-      <img src="{{ image|path }}" alt="" />
+      <img src="{{ image|path }}" alt="" loading="lazy" width="608" height="404" >
     </div>
     <div class="external-news-story__content">
       <h3>{{headline}}</h3>
