--- a/src/components/feature-with-large-image/feature-with-large-image.twig
+++ b/src/components/feature-with-large-image/feature-with-large-image.twig
@@ -1,6 +1,6 @@
 <div class="feature-with-large-image">
   <div class="feature-with-large-image__media">
-    <img src="{{ image|path }}" alt="" />
+    <img src="{{ image|path }}" alt="" loading="lazy" width="1176" height="662" >
   </div>
   <div class="feature-with-large-image__content">
     <h2>{{title}}</h2>
