--- a/src/components/hero/hero.twig
+++ b/src/components/hero/hero.twig
@@ -5,7 +5,7 @@
   </div>
   {% if image %}
   <div class="hero__media">
-    <img src="{{image}}" alt="">
+    <img src="{{image}}" alt="" loading="lazy" width="1770" height="662">
   </div>
   {% endif %}
   <div class="hero__subnav-wrap">
