--- a/src/components/site-header/site-header--ecosystem.twig
+++ b/src/components/site-header/site-header--ecosystem.twig
@@ -2,7 +2,7 @@
   <div class="site-header__top">
     <div class="site-header__logo-name-wrap">
       <a href="https://www.iastate.edu/" class="site-header__logo">
-        <img src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-no-tagline-red.svg"|path }}" alt="Iowa State University">
+        <img src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-no-tagline-red.svg"|path }}" alt="Iowa State University" loading="lazy" width="224" height="17">
       </a>
       {% if parent_unit %}<a class="site-header__parent-unit-name" href="{{ parent_unit.url }}">{{ parent_unit.name }}</a>{% endif %}
     </div>
