--- a/src/components/pages/home.twig
+++ b/src/components/pages/home.twig
@@ -7,8 +7,8 @@
 
 <div class="home-hero{% if home_announcement_alert %} home-hero--with-announcement{% endif %}">
   <div class="home-hero__media">
-		<img class="home-hero__media-mobile" src="{{ hero.image_mobile|path }}" alt="" />
-    <img class="home-hero__media-desktop" src="{{ hero.image_desktop|path }}" alt="" />
+		<img class="home-hero__media-mobile" src="{{ hero.image_mobile|path }}" alt="" loading="lazy" width="633" height="920">
+    <img class="home-hero__media-desktop" src="{{ hero.image_desktop|path }}" alt="" loading="lazy" width="2000" height="800">
 	</div>
   <div class="home-hero__animation">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 350 300" preserveAspectRatio="xMidYMid meet">
@@ -41,10 +41,10 @@
     </div>
     <div class="home-community__callout-media-statistic-wrap">
       <div class="home-community__callout-media">
-        <img src="{{ community.callout.imageOne|path }}" alt="" />
+        <img src="{{ community.callout.imageOne|path }}" alt="" loading="lazy" width="520" height="347">
       </div>
       <div class="home-community__callout-media-two">
-        <img src="{{ community.callout.imageTwo|path }}" alt="" />
+        <img src="{{ community.callout.imageTwo|path }}" alt="" loading="lazy" width="478" height="290">
       </div>
       <div class="home-community__callout-statistic">
         <h3 class="home-community__callout-statistic-stat">{{ community.callout.statistic.stat }}</h3>
@@ -59,7 +59,7 @@
   <div class="iastate22-blockquote__inner-wrap">
     {% if home_blockquote.portrait %}
     <div class="iastate22-blockquote__portrait" data-micromodal-trigger="{{ home_blockquote.modal.id }}">
-      <img src="{{ home_blockquote.portrait|path }}" alt="" />
+      <img src="{{ home_blockquote.portrait|path }}" alt="" loading="lazy" width="258" height="258">
       <button class="video-embed__button">
         <svg viewBox = "0 0 83 83" preserveAspectRatio="xMidYMid meet" class="video-play-icon" xmlns="http://www.w3.org/2000/svg"><g class="outer-circle" fill="none" fill-rule="evenodd"><g opacity=".377" fill="#FFF" fill-rule="nonzero" transform="translate(1 1)"><circle cx="40" cy="40" r="40"/><path d="M40 0C17.909 0 0 17.909 0 40s17.909 40 40 40 40-17.909 40-40S62.091 0 40 0Zm0 1c21.54 0 39 17.46 39 39S61.54 79 40 79 1 61.54 1 40 18.46 1 40 1Z"/></g><path d="M24 22.818h35V57.93H24z"/><path class="arrow" d="m59.986 39.288-28.433-17.68c-2.073-1.363-3.767-.36-3.767 2.229V58.16c0 2.593 1.694 3.593 3.767 2.229l28.433-17.68c.565-.4.934-1.022 1.014-1.71a2.438 2.438 0 0 0-1.01-1.707l-.004-.004Z" fill="#FFF" fill-rule="nonzero"/></g></svg>
         <span class="visible-for-screen-readers">Play Video</span>
@@ -130,7 +130,7 @@
 
 <div class="home-location">
   <div class="home-location__media">
-    <img src="{{ location.image|path }}" alt="" />
+    <img src="{{ location.image|path }}" alt="" loading="lazy" width="1422" height="790">
   </div>
   <div class="home-location__caption">
     <span class="fak fa-iastate22-map-pin" aria-hidden="true"></span>
@@ -233,7 +233,7 @@
       </div>
     </div>
     <div class="home-resources__image">
-      <img src="{{ resources.image|path }}" alt="" width="290" height="210" />
+      <img src="{{ resources.image|path }}" alt="" width="290" height="210" loading="lazy">
     </div>
   </div>
 </div>
@@ -244,15 +244,15 @@
     {% include "@button-set" with ctas.button_set %}
   </div>
   <div class="home-ctas__image">
-    <img src="{{ ctas.images.one|path }}" alt="" width="378" height="236" />
+    <img src="{{ ctas.images.one|path }}" alt="" width="378" height="236" loading="lazy">
   </div>
   <div class="home-ctas__image">
-    <img src="{{ ctas.images.two|path }}" alt="" width="378" height="274" />
+    <img src="{{ ctas.images.two|path }}" alt="" width="378" height="274" loading="lazy">
   </div>
 </div>
 
 <div class="home-full-width-campus-photo">
-    <img class="home-full-width-campus-photo__mobile" src="{{ campus_photo.image_mobile|path }}" alt="" />
-    <img class="home-full-width-campus-photo__desktop" src="{{ campus_photo.image_desktop|path }}" alt="" />
+    <img class="home-full-width-campus-photo__mobile" src="{{ campus_photo.image_mobile|path }}" alt="" loading="lazy" width="633" height="290">
+    <img class="home-full-width-campus-photo__desktop" src="{{ campus_photo.image_desktop|path }}" alt="" loading="lazy" width="1600" height="733">
 </div>
 {% endblock %}
