Correcting issue on majors minors and certificates page where statistic section was not displaying properly, updating statistic component css to ensure no stray pseudo elements appear regardless of context

--- a/src/components/statistic/_statistic.scss
+++ b/src/components/statistic/_statistic.scss
@@ -36,6 +36,9 @@
         margin-left: rem(-39);
         bottom: rem(-32);
       }
+      &:before {
+        display: none;
+      }
     }
   }
 }
